src/gui/src/css/style.css
/**
 * Copyright (C) 2024 Puter Technologies Inc.
 *
 * This file is part of Puter.
 *
 * Puter is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 * 
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Thin.ttf') format('truetype');
    font-weight: 100;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-ExtraLight.ttf') format('truetype');
    font-weight: 200;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Light.ttf') format('truetype');
    font-weight: 300;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Regular.ttf') format('truetype');
    font-weight: 400;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Medium.ttf') format('truetype');
    font-weight: 500;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-SemiBold.ttf') format('truetype');
    font-weight: 600;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Bold.ttf') format('truetype');
    font-weight: 700;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-ExtraBold.ttf') format('truetype');
    font-weight: 800;
}

@font-face {
    font-family: 'Inter';
    src: url('/fonts/Inter-Black.ttf') format('truetype');
    font-weight: 900;
}

* {
    font-family: "Inter", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
    user-select: none;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings: "slnt"0;
}

pre {
    font-family: "Inter", "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
}

:root {
    --primary-hue: 210;
    --primary-saturation: 41.18%;
    --primary-lightness: 93.33%;
    --primary-alpha: 0.8;
    --primary-color: #373e44;
    --primary-color-sidebar: #fefeff;
    --primary-color-sidebar-item: #5a5d61aa;

    --window-head-hue: var(--primary-hue);
    --window-head-saturation: var(--primary-saturation);
    --window-head-lightness: var(--primary-lightness);
    --window-head-alpha: var(--primary-alpha);
    --window-head-color: var(--primary-color);

    --window-sidebar-hue: var(--primary-hue);
    --window-sidebar-saturation: var(--primary-saturation);
    --window-sidebar-lightness: var(--primary-lightness);
    --window-sidebar-alpha: calc(min(1, 0.11 + var(--primary-alpha)));
    --window-sidebar-color: var(--primary-color);
    --window-sidebar-active-bg: var(--primary-color-sidebar-item);
    

    --taskbar-hue: var(--primary-hue);
    --taskbar-saturation: var(--primary-saturation);
    --taskbar-lightness: var(--primary-lightness);
    --taskbar-alpha: calc(0.73 * var(--primary-alpha));
    --taskbar-color: var(--primary-color);

    --select-hue: 213.05;
    --select-saturation: 74.22%;
    --select-lightness: 55.88%;
    --select-color: hsl(var(--select-hue), var(--select-saturation), var(--select-lightness));
}

html, body {
    /* disables two fingers back/forward swipe */
    overscroll-behavior-x: none;
}

body {
    background: no-repeat center center fixed;
    background-position: center;
    background-size: cover;
    background-color: #3d4c74;
    overflow: hidden;
}

.embedded-in-3rd-party-website, .embedded-in-popup {
    background: none !important;
    background-color: #ccccccbe !important;
}

.disable-user-select {
    cursor: default;
    -webkit-touch-callout: none !important;
    -webkit-user-select: none !important;
    -khtml-user-select: none !important;
    -moz-user-select: none !important;
    -ms-user-select: none !important;
    user-select: none !important;
}

.enable-user-select, .enable-user-select * {
    cursor: initial;
    -webkit-touch-callout: text !important;
    -webkit-user-select: text !important;
    -khtml-user-select: text !important;
    -moz-user-select: text !important;
    -ms-user-select: text !important;
    user-select: text !important;
}

.window-container {
    position: fixed;
    top: 0;
    left: -100000px;
    width: 200000px;
    height: 200000px;
    z-index: -9999;
}

input[type=text], input[type=password], input[type=email], select {
    width: 100%;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    outline: none;
    -webkit-font-smoothing: antialiased;
    color: #393f46;
    font-size: 14px;
}

/* to prevent auto-zoom on input focus in mobile */
.device-phone input[type=text], .device-phone input[type=password], .device-phone input[type=email], .device-phone select {
    font-size: 17px;
}

input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, select:focus {
    border: 2px solid #01a0fd;
    padding: 7px;
}
/* ... */

